--- a/basics/high_order_functions.ipynb
+++ b/basics/high_order_functions.ipynb
@@ -2,35 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "392.216717807\n",
-      "243.71209416\n",
-      "Hello World\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from haversine import haversine\n",
-    "lyon = (45.7597, 4.8422) # (lat, lon)\n",
-    "paris = (48.8567, 2.3508) \n",
-    "print haversine(lyon, paris) # in kilometers\n",
-    "print haversine(lyon, paris, miles=True) # in miles\n",
-    "print \"Hello World\""
+    "import math\n",
+    "math.sqrt(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 函数作为参数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "def multiple(x,y,f):\n",
+    "    return f(x)*f(y)\n",
+    "multiple(16,25,math.sqrt)    "
    ]
   },
   {
